# manimator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  crispr_reel.json  crispr_video.json  docker-compose.yml  gradient_descent.json  pyproject.toml  requirements.txt  transformers_example.json
.github/workflows/: ci.yml
manimator/: __init__.py  analytics.py  codegen.py  config.py  helpers.py  llm.py  music.py  narration.py  orchestrator.py  pipeline.py  renderer.py  schema.py  social.py  storyboard_cli.py  subtitles.py  timing.py  topic_templates.py  uploader.py
manimator/portrait/: __init__.py  __main__.py  html_scenes.py  orchestrator.py  renderer.py
manimator/templates/: __init__.py  bar_chart.py  bullet_list.py  closing.py  comparison_table.py  equation.py  flowchart.py  hook.py  pipeline_diagram.py  scatter_plot.py  title.py  two_panel.py
manimator/web/: __init__.py  __main__.py  app.py
output/: 02852615.json  1bdbb169.json  48b3d59a.json  6369277f.json  78d4de2b.json  7abd1958.json  977ea0c5.json  ae1ed963.json  c2b09cb7.json  e3426b91.json  f9b4778e.json
tests/: conftest.py  test_analytics.py  test_codegen.py  test_config.py  test_html_scenes.py  test_llm.py  test_music.py  test_narration_sync.py  test_pipeline.py  test_schema.py  test_topic_templates.py  test_uploader.py  test_web_api.py
vidgen/: __init__.py  codegen.py  config.py  helpers.py  narration.py  orchestrator.py  social.py  storyboard_cli.py  topic_templates.py
vidgen/portrait/: __main__.py  orchestrator.py  renderer.py
vidgen/templates/: bar_chart.py  bullet_list.py  closing.py  comparison_table.py  equation.py  flowchart.py  hook.py  pipeline_diagram.py  scatter_plot.py  title.py  two_panel.py
vidgen/web/: __init__.py  __main__.py  app.py
